FEAT: Car Brand Service Impl Coverage